--- a/products/keto-burn-am-pills-oz5e/index.html
+++ b/products/keto-burn-am-pills-oz5e/index.html
@@ -254,7 +254,7 @@
                                 <div class="elementor-element elementor-element-0de021a elementor-widget elementor-widget-image"
                                 data-id="0de021a" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./shenji/am.png" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./shenji/am.png" >
                                         </a>
                                     </div>
@@ -338,7 +338,7 @@ Some people may also get diarrhea.
                                 <div class="elementor-element elementor-element-0de021a elementor-widget elementor-widget-image"
                                 data-id="0de021a" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./shenji/sideeffect.jpg" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./shenji/sideeffect.jpg" >
                                         </a>
                                     </div>
@@ -405,7 +405,7 @@ Some people may also get diarrhea.
                                 <div class="elementor-element elementor-element-0de021a elementor-widget elementor-widget-image"
                                 data-id="0de021a" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./shenji/settle.jpg" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./shenji/settle.jpg" >
                                         </a>
                                     </div>
@@ -426,7 +426,7 @@ Some people may also get diarrhea.
                                 data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="https://track.keto-burn.shop/example">
+                                            <a href="https://keto-burn.shop/example">
                                                 <u>
                                                     Click Here To Learn More From Keto Trim Official Site
                                                 </u>
@@ -445,7 +445,7 @@ Some people may also get diarrhea.
                             <div class="elementor-widget-wrap elementor-element-populated">
                                 <div class="elementor-element elementor-element-0a2f1aa elementor-widget elementor-widget-image" data-id="0a2f1aa" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./shenji/trimupdate.jpg" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./shenji/trimupdate.jpg">
                                         </a>
                                     </div>
@@ -462,7 +462,7 @@ Some people may also get diarrhea.
                             <div class="elementor-widget-wrap elementor-element-populated">
                                 <div class="elementor-element elementor-element-0a2f1aa elementor-widget elementor-widget-image" data-id="0a2f1aa" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./pingzioneshot/trimupdate.jpg" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./pingzioneshot/trimupdate.jpg">
                                         </a>
                                     </div>
@@ -484,7 +484,7 @@ Some people may also get diarrhea.
                                 data-id="4d956e6" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://track.keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="https://keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -542,7 +542,7 @@ Some people may also get diarrhea.
                                 <div class="elementor-element elementor-element-0de021a elementor-widget elementor-widget-image"
                                 data-id="0de021a" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./shenji/trimcompare.jpg" class="attachment-medium size-medium" alt="" loading="lazy" weight="1500" hight="1500" srcset="./shenji/trimcompare.jpg" >
                                         </a>
                                     </div>
@@ -551,7 +551,7 @@ Some people may also get diarrhea.
                                 data-id="7badd9a" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://track.keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="https://keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -580,7 +580,7 @@ Some people may also get diarrhea.
                                 data-id="1070a67" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="https://track.keto-burn.shop/example">
+                                            <a href="https://keto-burn.shop/example">
                                                 <u>
                                                     Click Here To Learn More From Keto Trim Official Site
                                                 </u>
@@ -634,7 +634,7 @@ Some people may also get diarrhea.
                                 <div class="elementor-element elementor-element-0de021a elementor-widget elementor-widget-image"
                                 data-id="0de021a" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img src="./shenji/trimproduct.jpg" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./shenji/trimproduct.jpg" >
                                         </a>
                                     </div>
@@ -643,7 +643,7 @@ Some people may also get diarrhea.
                                 data-id="7badd9a" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://track.keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="https://keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -724,7 +724,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 <div class="elementor-element elementor-element-0de021a elementor-widget elementor-widget-image"
                                 data-id="0de021a" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img width="215" height="300" src="./static/kt-215x300.png" class="attachment-medium size-medium" alt="" loading="lazy" srcset="./static/kt-215x300.png" sizes="(max-width: 215px) 100vw, 215px">
                                         </a>
                                     </div>
@@ -733,7 +733,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 data-id="7badd9a" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://track.keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="https://keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -769,7 +769,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 data-id="19e9bf3" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="https://track.keto-burn.shop/example">
+                                            <a href="https://keto-burn.shop/example">
                                                 <u>
                                                     Click Here To Learn More From Keto Trim Official Site
                                                 </u>
@@ -823,7 +823,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 <div class="elementor-element elementor-element-33d7e6c elementor-widget elementor-widget-image"
                                 data-id="33d7e6c" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img width="244" height="284" src="./static/a.png" class="attachment-medium size-medium"
                                             alt="" loading="lazy">
                                         </a>
@@ -867,7 +867,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 <div class="elementor-element elementor-element-ba9832b elementor-widget elementor-widget-image"
                                 data-id="ba9832b" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img width="244" height="284" src="./static/b.png" class="attachment-medium size-medium"
                                             alt="" loading="lazy">
                                         </a>
@@ -911,7 +911,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 <div class="elementor-element elementor-element-f74b316 elementor-widget elementor-widget-image"
                                 data-id="f74b316" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img width="244" height="284" src="./static/c.png" class="attachment-medium size-medium"
                                             alt="" loading="lazy">
                                         </a>
@@ -961,7 +961,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 data-id="bb5e0df" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://track.keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="https://keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
@@ -997,7 +997,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 data-id="b55f386" data-element_type="widget" data-widget_type="heading.default">
                                     <div class="elementor-widget-container">
                                         <h2 class="elementor-heading-title elementor-size-default">
-                                            <a href="https://track.keto-burn.shop/example">
+                                            <a href="https://keto-burn.shop/example">
                                                 <u>
                                                     Click Here To Learn More From Keto Trim Official Site
                                                 </u>
@@ -1027,7 +1027,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 <div class="elementor-element elementor-element-96cdf05 elementor-widget elementor-widget-image"
                                 data-id="96cdf05" data-element_type="widget" data-widget_type="image.default">
                                     <div class="elementor-widget-container">
-                                        <a href="https://track.keto-burn.shop/example">
+                                        <a href="https://keto-burn.shop/example">
                                             <img width="1029" height="489" src="./shenji/trimlifelong.jpg" class="attachment-full size-full"
                                             alt="" loading="lazy" srcset="./shenji/trimlifelong.jpg"
                                             sizes="(max-width: 1029px) 100vw, 1029px">
@@ -1048,7 +1048,7 @@ you will get it within 24 hours from the moment you sendme the request. So you h
                                 data-id="3996cc5" data-element_type="widget" data-widget_type="button.default">
                                     <div class="elementor-widget-container">
                                         <div class="elementor-button-wrapper">
-                                            <a href="https://track.keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
+                                            <a href="https://keto-burn.shop/example" class="elementor-button-link elementor-button elementor-size-lg"
                                             role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-text">
